[project]
name = "aioapcaccess"
requires-python = ">=3.8"
description = "Async version of apcaccess library implemented in python."
dynamic = ["version"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yuxin Wang", email = "yuxinwang.dev@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
atomic = true
profile = "black"
line_length = 99
force_sort_within_sections = true
skip_gitignore = true
combine_as_imports = true
known_first_party = ["aioapcaccess", "tests"]
forced_separate = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py38"
