[project]
name = "aioapcaccess"
requires-python = ">=3.9"
description = "Async version of apcaccess library implemented in python."
dynamic = ["version"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yuxin Wang", email = "yuxinwang.dev@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-asyncio>=0.17",
]

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]
